# serializer version: 1
# name: test_device_features_from_home_data[home_data_device_pearls.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': True,
    'is_ai_recognition_setting_supported': True,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': True,
    'is_auto_collection_2_supported': True,
    'is_auto_delivery_field_in_global_status_supported': True,
    'is_auto_tear_down_mop_supported': False,
    'is_avoid_collision_mode_supported': True,
    'is_avoid_collision_supported': True,
    'is_back_charge_auto_wash_supported': True,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': True,
    'is_carpet_custom_clean_supported': True,
    'is_carpet_deep_clean_supported': True,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': False,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': True,
    'is_carpet_supported': True,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': True,
    'is_clean_direct_status_supported': False,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': False,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': True,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': False,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': True,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': True,
    'is_custom_clean_mode_count_supported': True,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': True,
    'is_customized_clean_supported': True,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': False,
    'is_dirty_replenish_clean_supported': False,
    'is_dry_interval_timer_supported': False,
    'is_dss_believable': True,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': True,
    'is_dynamically_add_clean_zones_supported': True,
    'is_dynamically_skip_clean_zone_supported': True,
    'is_egg_dance_mode_supported': False,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': True,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': True,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': True,
    'is_gap_deep_clean_supported': False,
    'is_goto_pure_clean_path_supported': True,
    'is_hot_wash_towel_supported': False,
    'is_identify_room_supported': False,
    'is_ignore_unknown_map_object_supported': True,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': True,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': False,
    'is_map_beautify_internal_debug_supported': True,
    'is_map_carpet_add_support': True,
    'is_map_eraser_supported': False,
    'is_matter_supported': False,
    'is_max_plus_mode_supported': True,
    'is_max_zone_opened_supported': False,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': False,
    'is_min_battery_15_to_clean_task_supported': True,
    'is_mop_forbidden_supported': False,
    'is_mop_path_supported': True,
    'is_mop_shake_module_supported': False,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': True,
    'is_new_ai_recognition_supported': True,
    'is_new_data_for_clean_history': True,
    'is_new_data_for_clean_history_detail': True,
    'is_new_endpoint_supported': True,
    'is_new_remote_view_supported': False,
    'is_no_need_carpet_press_set_supported': True,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': False,
    'is_offline_map_supported': True,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': False,
    'is_pet_supplies_deep_clean_supported': True,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': True,
    'is_record_allowed': True,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': False,
    'is_roller_mop_supported': False,
    'is_room_name_supported': True,
    'is_rpc_retry_supported': True,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': True,
    'is_setting_carpet_first_supported': True,
    'is_shake_mop_set_supported': True,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': True,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': True,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': True,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': True,
    'is_support_clean_estimate': True,
    'is_support_cliff_zone': True,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': True,
    'is_support_custom_door_sill': True,
    'is_support_custom_mode_in_cleaning': True,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': True,
    'is_support_floor_edit': True,
    'is_support_furniture': True,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': True,
    'is_support_main_brush_up_down_supported': False,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': True,
    'is_support_remote_control_in_call': False,
    'is_support_room_tag': True,
    'is_support_set_switch_map_mode': True,
    'is_support_set_volume_in_call': False,
    'is_support_side_brush_up_down_supported': False,
    'is_support_smart_door_sill': True,
    'is_support_smart_global_clean_with_custom_mode': True,
    'is_support_smart_scene': True,
    'is_support_stuck_zone': True,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': True,
    'is_supported_drying': True,
    'is_supported_valley_electricity': True,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': False,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': True,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': True,
    'is_video_patrol_supported': False,
    'is_video_setting_supported': True,
    'is_voice_control_led_supported': False,
    'is_voice_control_supported': False,
    'is_wash_then_charge_cmd_supported': True,
    'is_water_leak_check_supported': False,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': True,
    'is_wifi_manage_supported': True,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_q10.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': True,
    'is_ai_recognition_setting_supported': True,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': False,
    'is_auto_collection_2_supported': False,
    'is_auto_delivery_field_in_global_status_supported': False,
    'is_auto_tear_down_mop_supported': False,
    'is_avoid_collision_mode_supported': False,
    'is_avoid_collision_supported': False,
    'is_back_charge_auto_wash_supported': False,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': False,
    'is_carpet_custom_clean_supported': False,
    'is_carpet_deep_clean_supported': False,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': False,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': False,
    'is_carpet_supported': False,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': False,
    'is_clean_direct_status_supported': False,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': False,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': False,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': False,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': False,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': False,
    'is_custom_clean_mode_count_supported': False,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': False,
    'is_customized_clean_supported': True,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': False,
    'is_dirty_replenish_clean_supported': False,
    'is_dry_interval_timer_supported': False,
    'is_dss_believable': False,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': False,
    'is_dynamically_add_clean_zones_supported': False,
    'is_dynamically_skip_clean_zone_supported': False,
    'is_egg_dance_mode_supported': False,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': False,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': False,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': False,
    'is_gap_deep_clean_supported': False,
    'is_goto_pure_clean_path_supported': False,
    'is_hot_wash_towel_supported': False,
    'is_identify_room_supported': False,
    'is_ignore_unknown_map_object_supported': False,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': False,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': False,
    'is_map_beautify_internal_debug_supported': False,
    'is_map_carpet_add_support': False,
    'is_map_eraser_supported': False,
    'is_matter_supported': False,
    'is_max_plus_mode_supported': True,
    'is_max_zone_opened_supported': False,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': False,
    'is_min_battery_15_to_clean_task_supported': False,
    'is_mop_forbidden_supported': False,
    'is_mop_path_supported': False,
    'is_mop_shake_module_supported': False,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': False,
    'is_new_ai_recognition_supported': False,
    'is_new_data_for_clean_history': False,
    'is_new_data_for_clean_history_detail': False,
    'is_new_endpoint_supported': False,
    'is_new_remote_view_supported': True,
    'is_no_need_carpet_press_set_supported': False,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': False,
    'is_offline_map_supported': False,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': False,
    'is_pet_supplies_deep_clean_supported': False,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': False,
    'is_record_allowed': False,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': False,
    'is_roller_mop_supported': False,
    'is_room_name_supported': False,
    'is_rpc_retry_supported': False,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': False,
    'is_setting_carpet_first_supported': False,
    'is_shake_mop_set_supported': False,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': False,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': False,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': False,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': False,
    'is_support_clean_estimate': False,
    'is_support_cliff_zone': False,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': False,
    'is_support_custom_door_sill': False,
    'is_support_custom_mode_in_cleaning': False,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': False,
    'is_support_floor_edit': False,
    'is_support_furniture': False,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': False,
    'is_support_main_brush_up_down_supported': False,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': False,
    'is_support_remote_control_in_call': False,
    'is_support_room_tag': False,
    'is_support_set_switch_map_mode': False,
    'is_support_set_volume_in_call': False,
    'is_support_side_brush_up_down_supported': False,
    'is_support_smart_door_sill': False,
    'is_support_smart_global_clean_with_custom_mode': False,
    'is_support_smart_scene': False,
    'is_support_stuck_zone': False,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': False,
    'is_supported_drying': False,
    'is_supported_valley_electricity': False,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': False,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': False,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': False,
    'is_video_patrol_supported': False,
    'is_video_setting_supported': False,
    'is_voice_control_led_supported': False,
    'is_voice_control_supported': False,
    'is_wash_then_charge_cmd_supported': False,
    'is_water_leak_check_supported': False,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': False,
    'is_wifi_manage_supported': False,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_q5_max.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': False,
    'is_ai_recognition_setting_supported': False,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': True,
    'is_auto_collection_2_supported': False,
    'is_auto_delivery_field_in_global_status_supported': False,
    'is_auto_tear_down_mop_supported': False,
    'is_avoid_collision_mode_supported': False,
    'is_avoid_collision_supported': False,
    'is_back_charge_auto_wash_supported': True,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': True,
    'is_carpet_custom_clean_supported': False,
    'is_carpet_deep_clean_supported': False,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': False,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': True,
    'is_carpet_supported': False,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': False,
    'is_clean_direct_status_supported': False,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': False,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': True,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': False,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': False,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': True,
    'is_custom_clean_mode_count_supported': False,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': False,
    'is_customized_clean_supported': False,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': False,
    'is_dirty_replenish_clean_supported': False,
    'is_dry_interval_timer_supported': False,
    'is_dss_believable': True,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': True,
    'is_dynamically_add_clean_zones_supported': False,
    'is_dynamically_skip_clean_zone_supported': False,
    'is_egg_dance_mode_supported': False,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': False,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': False,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': True,
    'is_gap_deep_clean_supported': False,
    'is_goto_pure_clean_path_supported': True,
    'is_hot_wash_towel_supported': False,
    'is_identify_room_supported': False,
    'is_ignore_unknown_map_object_supported': True,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': True,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': False,
    'is_map_beautify_internal_debug_supported': True,
    'is_map_carpet_add_support': False,
    'is_map_eraser_supported': False,
    'is_matter_supported': False,
    'is_max_plus_mode_supported': False,
    'is_max_zone_opened_supported': False,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': False,
    'is_min_battery_15_to_clean_task_supported': False,
    'is_mop_forbidden_supported': False,
    'is_mop_path_supported': False,
    'is_mop_shake_module_supported': False,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': True,
    'is_new_ai_recognition_supported': False,
    'is_new_data_for_clean_history': True,
    'is_new_data_for_clean_history_detail': True,
    'is_new_endpoint_supported': True,
    'is_new_remote_view_supported': False,
    'is_no_need_carpet_press_set_supported': False,
    'is_none_pure_clean_mop_with_max_plus': True,
    'is_object_detect_check_supported': False,
    'is_offline_map_supported': True,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': False,
    'is_pet_supplies_deep_clean_supported': False,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': True,
    'is_record_allowed': True,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': False,
    'is_roller_mop_supported': False,
    'is_room_name_supported': True,
    'is_rpc_retry_supported': True,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': True,
    'is_setting_carpet_first_supported': False,
    'is_shake_mop_set_supported': True,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': True,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': False,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': True,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': True,
    'is_support_clean_estimate': True,
    'is_support_cliff_zone': True,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': True,
    'is_support_custom_door_sill': True,
    'is_support_custom_mode_in_cleaning': True,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': True,
    'is_support_floor_edit': True,
    'is_support_furniture': True,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': True,
    'is_support_main_brush_up_down_supported': False,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': True,
    'is_support_remote_control_in_call': False,
    'is_support_room_tag': True,
    'is_support_set_switch_map_mode': True,
    'is_support_set_volume_in_call': False,
    'is_support_side_brush_up_down_supported': False,
    'is_support_smart_door_sill': True,
    'is_support_smart_global_clean_with_custom_mode': True,
    'is_support_smart_scene': True,
    'is_support_stuck_zone': True,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': True,
    'is_supported_drying': False,
    'is_supported_valley_electricity': True,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': False,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': True,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': True,
    'is_video_patrol_supported': False,
    'is_video_setting_supported': True,
    'is_voice_control_led_supported': False,
    'is_voice_control_supported': False,
    'is_wash_then_charge_cmd_supported': True,
    'is_water_leak_check_supported': False,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': True,
    'is_wifi_manage_supported': True,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_q7.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': True,
    'is_ai_recognition_setting_supported': True,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': False,
    'is_auto_collection_2_supported': False,
    'is_auto_delivery_field_in_global_status_supported': False,
    'is_auto_tear_down_mop_supported': False,
    'is_avoid_collision_mode_supported': False,
    'is_avoid_collision_supported': False,
    'is_back_charge_auto_wash_supported': False,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': False,
    'is_carpet_custom_clean_supported': False,
    'is_carpet_deep_clean_supported': False,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': False,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': False,
    'is_carpet_supported': False,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': False,
    'is_clean_direct_status_supported': False,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': False,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': False,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': False,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': False,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': False,
    'is_custom_clean_mode_count_supported': False,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': False,
    'is_customized_clean_supported': True,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': False,
    'is_dirty_replenish_clean_supported': False,
    'is_dry_interval_timer_supported': False,
    'is_dss_believable': False,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': False,
    'is_dynamically_add_clean_zones_supported': False,
    'is_dynamically_skip_clean_zone_supported': False,
    'is_egg_dance_mode_supported': False,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': False,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': False,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': False,
    'is_gap_deep_clean_supported': False,
    'is_goto_pure_clean_path_supported': False,
    'is_hot_wash_towel_supported': False,
    'is_identify_room_supported': False,
    'is_ignore_unknown_map_object_supported': False,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': False,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': False,
    'is_map_beautify_internal_debug_supported': False,
    'is_map_carpet_add_support': False,
    'is_map_eraser_supported': False,
    'is_matter_supported': False,
    'is_max_plus_mode_supported': True,
    'is_max_zone_opened_supported': False,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': False,
    'is_min_battery_15_to_clean_task_supported': False,
    'is_mop_forbidden_supported': False,
    'is_mop_path_supported': False,
    'is_mop_shake_module_supported': False,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': False,
    'is_new_ai_recognition_supported': False,
    'is_new_data_for_clean_history': False,
    'is_new_data_for_clean_history_detail': False,
    'is_new_endpoint_supported': False,
    'is_new_remote_view_supported': True,
    'is_no_need_carpet_press_set_supported': False,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': False,
    'is_offline_map_supported': False,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': False,
    'is_pet_supplies_deep_clean_supported': False,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': False,
    'is_record_allowed': False,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': False,
    'is_roller_mop_supported': False,
    'is_room_name_supported': False,
    'is_rpc_retry_supported': False,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': False,
    'is_setting_carpet_first_supported': False,
    'is_shake_mop_set_supported': False,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': False,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': False,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': False,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': False,
    'is_support_clean_estimate': False,
    'is_support_cliff_zone': False,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': False,
    'is_support_custom_door_sill': False,
    'is_support_custom_mode_in_cleaning': False,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': False,
    'is_support_floor_edit': False,
    'is_support_furniture': False,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': False,
    'is_support_main_brush_up_down_supported': False,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': False,
    'is_support_remote_control_in_call': False,
    'is_support_room_tag': False,
    'is_support_set_switch_map_mode': False,
    'is_support_set_volume_in_call': False,
    'is_support_side_brush_up_down_supported': False,
    'is_support_smart_door_sill': False,
    'is_support_smart_global_clean_with_custom_mode': False,
    'is_support_smart_scene': False,
    'is_support_stuck_zone': False,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': False,
    'is_supported_drying': False,
    'is_supported_valley_electricity': False,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': False,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': False,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': False,
    'is_video_patrol_supported': False,
    'is_video_setting_supported': False,
    'is_voice_control_led_supported': False,
    'is_voice_control_supported': False,
    'is_wash_then_charge_cmd_supported': False,
    'is_water_leak_check_supported': False,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': False,
    'is_wifi_manage_supported': False,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_q_revo.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': True,
    'is_ai_recognition_setting_supported': True,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': True,
    'is_auto_collection_2_supported': False,
    'is_auto_delivery_field_in_global_status_supported': False,
    'is_auto_tear_down_mop_supported': False,
    'is_avoid_collision_mode_supported': True,
    'is_avoid_collision_supported': True,
    'is_back_charge_auto_wash_supported': True,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': True,
    'is_carpet_custom_clean_supported': True,
    'is_carpet_deep_clean_supported': True,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': False,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': True,
    'is_carpet_supported': True,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': True,
    'is_clean_direct_status_supported': False,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': False,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': True,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': False,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': False,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': False,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': True,
    'is_custom_clean_mode_count_supported': True,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': True,
    'is_customized_clean_supported': True,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': False,
    'is_dirty_replenish_clean_supported': False,
    'is_dry_interval_timer_supported': False,
    'is_dss_believable': True,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': True,
    'is_dynamically_add_clean_zones_supported': True,
    'is_dynamically_skip_clean_zone_supported': True,
    'is_egg_dance_mode_supported': False,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': True,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': False,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': True,
    'is_gap_deep_clean_supported': False,
    'is_goto_pure_clean_path_supported': True,
    'is_hot_wash_towel_supported': False,
    'is_identify_room_supported': False,
    'is_ignore_unknown_map_object_supported': True,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': True,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': True,
    'is_map_beautify_internal_debug_supported': True,
    'is_map_carpet_add_support': True,
    'is_map_eraser_supported': False,
    'is_matter_supported': False,
    'is_max_plus_mode_supported': True,
    'is_max_zone_opened_supported': False,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': False,
    'is_min_battery_15_to_clean_task_supported': False,
    'is_mop_forbidden_supported': True,
    'is_mop_path_supported': True,
    'is_mop_shake_module_supported': False,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': True,
    'is_new_ai_recognition_supported': False,
    'is_new_data_for_clean_history': True,
    'is_new_data_for_clean_history_detail': True,
    'is_new_endpoint_supported': True,
    'is_new_remote_view_supported': False,
    'is_no_need_carpet_press_set_supported': False,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': False,
    'is_offline_map_supported': True,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': False,
    'is_pet_supplies_deep_clean_supported': False,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': True,
    'is_record_allowed': True,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': False,
    'is_roller_mop_supported': False,
    'is_room_name_supported': True,
    'is_rpc_retry_supported': True,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': True,
    'is_setting_carpet_first_supported': True,
    'is_shake_mop_set_supported': True,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': True,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': False,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': True,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': True,
    'is_support_clean_estimate': True,
    'is_support_cliff_zone': True,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': True,
    'is_support_custom_door_sill': True,
    'is_support_custom_mode_in_cleaning': True,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': True,
    'is_support_floor_edit': True,
    'is_support_furniture': True,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': True,
    'is_support_main_brush_up_down_supported': False,
    'is_support_mop_back_pwm_set': True,
    'is_support_quick_map_builder': True,
    'is_support_remote_control_in_call': False,
    'is_support_room_tag': True,
    'is_support_set_switch_map_mode': True,
    'is_support_set_volume_in_call': False,
    'is_support_side_brush_up_down_supported': False,
    'is_support_smart_door_sill': True,
    'is_support_smart_global_clean_with_custom_mode': True,
    'is_support_smart_scene': True,
    'is_support_stuck_zone': True,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': True,
    'is_supported_drying': True,
    'is_supported_valley_electricity': True,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': False,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': True,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': True,
    'is_video_patrol_supported': False,
    'is_video_setting_supported': True,
    'is_voice_control_led_supported': False,
    'is_voice_control_supported': False,
    'is_wash_then_charge_cmd_supported': True,
    'is_water_leak_check_supported': True,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': True,
    'is_wifi_manage_supported': True,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_s5e.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': False,
    'is_ai_recognition_setting_supported': False,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': False,
    'is_auto_collection_2_supported': False,
    'is_auto_delivery_field_in_global_status_supported': False,
    'is_auto_tear_down_mop_supported': False,
    'is_avoid_collision_mode_supported': False,
    'is_avoid_collision_supported': False,
    'is_back_charge_auto_wash_supported': False,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': False,
    'is_carpet_custom_clean_supported': False,
    'is_carpet_deep_clean_supported': False,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': False,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': False,
    'is_carpet_supported': False,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': False,
    'is_clean_direct_status_supported': False,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': False,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': False,
    'is_clean_route_setting_supported': False,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': False,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': False,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': False,
    'is_custom_clean_mode_count_supported': False,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': False,
    'is_customized_clean_supported': False,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': False,
    'is_dirty_replenish_clean_supported': False,
    'is_dry_interval_timer_supported': False,
    'is_dss_believable': False,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': False,
    'is_dynamically_add_clean_zones_supported': False,
    'is_dynamically_skip_clean_zone_supported': False,
    'is_egg_dance_mode_supported': False,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': False,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': False,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': False,
    'is_gap_deep_clean_supported': False,
    'is_goto_pure_clean_path_supported': False,
    'is_hot_wash_towel_supported': False,
    'is_identify_room_supported': False,
    'is_ignore_unknown_map_object_supported': False,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': False,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': False,
    'is_map_beautify_internal_debug_supported': False,
    'is_map_carpet_add_support': False,
    'is_map_eraser_supported': False,
    'is_matter_supported': False,
    'is_max_plus_mode_supported': False,
    'is_max_zone_opened_supported': False,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': False,
    'is_min_battery_15_to_clean_task_supported': False,
    'is_mop_forbidden_supported': True,
    'is_mop_path_supported': False,
    'is_mop_shake_module_supported': False,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': False,
    'is_new_ai_recognition_supported': False,
    'is_new_data_for_clean_history': False,
    'is_new_data_for_clean_history_detail': False,
    'is_new_endpoint_supported': False,
    'is_new_remote_view_supported': False,
    'is_no_need_carpet_press_set_supported': False,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': False,
    'is_offline_map_supported': False,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': False,
    'is_pet_supplies_deep_clean_supported': False,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': False,
    'is_re_segment_supported': False,
    'is_record_allowed': False,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': False,
    'is_roller_mop_supported': False,
    'is_room_name_supported': False,
    'is_rpc_retry_supported': False,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': False,
    'is_setting_carpet_first_supported': False,
    'is_shake_mop_set_supported': False,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': False,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': False,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': False,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': False,
    'is_support_clean_estimate': False,
    'is_support_cliff_zone': False,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': False,
    'is_support_custom_door_sill': False,
    'is_support_custom_mode_in_cleaning': False,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': False,
    'is_support_floor_edit': False,
    'is_support_furniture': False,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': False,
    'is_support_main_brush_up_down_supported': False,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': False,
    'is_support_remote_control_in_call': False,
    'is_support_room_tag': False,
    'is_support_set_switch_map_mode': False,
    'is_support_set_volume_in_call': False,
    'is_support_side_brush_up_down_supported': False,
    'is_support_smart_door_sill': False,
    'is_support_smart_global_clean_with_custom_mode': False,
    'is_support_smart_scene': False,
    'is_support_stuck_zone': False,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': False,
    'is_supported_drying': False,
    'is_supported_valley_electricity': False,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': False,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': False,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': False,
    'is_video_patrol_supported': False,
    'is_video_setting_supported': False,
    'is_voice_control_led_supported': False,
    'is_voice_control_supported': False,
    'is_wash_then_charge_cmd_supported': False,
    'is_water_leak_check_supported': False,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': False,
    'is_wifi_manage_supported': False,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_s7_maxv.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': True,
    'is_ai_recognition_setting_supported': True,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': True,
    'is_auto_collection_2_supported': False,
    'is_auto_delivery_field_in_global_status_supported': False,
    'is_auto_tear_down_mop_supported': False,
    'is_avoid_collision_mode_supported': False,
    'is_avoid_collision_supported': True,
    'is_back_charge_auto_wash_supported': False,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': True,
    'is_carpet_custom_clean_supported': False,
    'is_carpet_deep_clean_supported': False,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': False,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': False,
    'is_carpet_supported': True,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': False,
    'is_clean_direct_status_supported': False,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': False,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': False,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': False,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': False,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': True,
    'is_custom_clean_mode_count_supported': False,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': False,
    'is_customized_clean_supported': True,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': False,
    'is_dirty_replenish_clean_supported': False,
    'is_dry_interval_timer_supported': False,
    'is_dss_believable': False,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': True,
    'is_dynamically_add_clean_zones_supported': False,
    'is_dynamically_skip_clean_zone_supported': False,
    'is_egg_dance_mode_supported': False,
    'is_egg_mode_supported_from_new_features': True,
    'is_exact_custom_mode_supported': False,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': False,
    'is_flow_led_setting_supported': True,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': True,
    'is_gap_deep_clean_supported': False,
    'is_goto_pure_clean_path_supported': False,
    'is_hot_wash_towel_supported': False,
    'is_identify_room_supported': False,
    'is_ignore_unknown_map_object_supported': True,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': False,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': False,
    'is_map_beautify_internal_debug_supported': True,
    'is_map_carpet_add_support': True,
    'is_map_eraser_supported': False,
    'is_matter_supported': False,
    'is_max_plus_mode_supported': True,
    'is_max_zone_opened_supported': False,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': False,
    'is_min_battery_15_to_clean_task_supported': False,
    'is_mop_forbidden_supported': True,
    'is_mop_path_supported': True,
    'is_mop_shake_module_supported': True,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': True,
    'is_new_ai_recognition_supported': False,
    'is_new_data_for_clean_history': True,
    'is_new_data_for_clean_history_detail': True,
    'is_new_endpoint_supported': False,
    'is_new_remote_view_supported': True,
    'is_no_need_carpet_press_set_supported': False,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': False,
    'is_offline_map_supported': False,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': False,
    'is_pet_supplies_deep_clean_supported': False,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': True,
    'is_record_allowed': True,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': False,
    'is_roller_mop_supported': False,
    'is_room_name_supported': True,
    'is_rpc_retry_supported': True,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': True,
    'is_setting_carpet_first_supported': False,
    'is_shake_mop_set_supported': True,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': True,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': False,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': False,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': True,
    'is_support_clean_estimate': False,
    'is_support_cliff_zone': False,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': False,
    'is_support_custom_door_sill': False,
    'is_support_custom_mode_in_cleaning': True,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': False,
    'is_support_floor_edit': True,
    'is_support_furniture': True,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': False,
    'is_support_main_brush_up_down_supported': False,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': True,
    'is_support_remote_control_in_call': False,
    'is_support_room_tag': True,
    'is_support_set_switch_map_mode': True,
    'is_support_set_volume_in_call': True,
    'is_support_side_brush_up_down_supported': False,
    'is_support_smart_door_sill': False,
    'is_support_smart_global_clean_with_custom_mode': True,
    'is_support_smart_scene': True,
    'is_support_stuck_zone': False,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': True,
    'is_supported_drying': True,
    'is_supported_valley_electricity': True,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': False,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': True,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': True,
    'is_video_patrol_supported': False,
    'is_video_setting_supported': True,
    'is_voice_control_led_supported': False,
    'is_voice_control_supported': False,
    'is_wash_then_charge_cmd_supported': True,
    'is_water_leak_check_supported': False,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': False,
    'is_wifi_manage_supported': False,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_saros.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': True,
    'is_ai_recognition_setting_supported': True,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': True,
    'is_auto_collection_2_supported': True,
    'is_auto_delivery_field_in_global_status_supported': True,
    'is_auto_tear_down_mop_supported': True,
    'is_avoid_collision_mode_supported': True,
    'is_avoid_collision_supported': True,
    'is_back_charge_auto_wash_supported': True,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': True,
    'is_carpet_custom_clean_supported': True,
    'is_carpet_deep_clean_supported': True,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': True,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': True,
    'is_carpet_supported': True,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': True,
    'is_clean_direct_status_supported': True,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': True,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': True,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': True,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': False,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': True,
    'is_custom_clean_mode_count_supported': True,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': False,
    'is_customized_clean_supported': True,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': True,
    'is_dirty_replenish_clean_supported': True,
    'is_dry_interval_timer_supported': True,
    'is_dss_believable': True,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': True,
    'is_dynamically_add_clean_zones_supported': True,
    'is_dynamically_skip_clean_zone_supported': True,
    'is_egg_dance_mode_supported': True,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': True,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': True,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': True,
    'is_gap_deep_clean_supported': True,
    'is_goto_pure_clean_path_supported': True,
    'is_hot_wash_towel_supported': True,
    'is_identify_room_supported': True,
    'is_ignore_unknown_map_object_supported': True,
    'is_lds_lifting_supported': True,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': True,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': True,
    'is_map_beautify_internal_debug_supported': True,
    'is_map_carpet_add_support': True,
    'is_map_eraser_supported': True,
    'is_matter_supported': True,
    'is_max_plus_mode_supported': True,
    'is_max_zone_opened_supported': True,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': True,
    'is_min_battery_15_to_clean_task_supported': True,
    'is_mop_forbidden_supported': False,
    'is_mop_path_supported': True,
    'is_mop_shake_module_supported': True,
    'is_mop_shake_water_max_supported': True,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': True,
    'is_new_ai_recognition_supported': True,
    'is_new_data_for_clean_history': True,
    'is_new_data_for_clean_history_detail': True,
    'is_new_endpoint_supported': True,
    'is_new_remote_view_supported': True,
    'is_no_need_carpet_press_set_supported': True,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': True,
    'is_offline_map_supported': True,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': True,
    'is_pet_supplies_deep_clean_supported': True,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': True,
    'is_record_allowed': True,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': True,
    'is_roller_mop_supported': False,
    'is_room_name_supported': True,
    'is_rpc_retry_supported': True,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': True,
    'is_setting_carpet_first_supported': True,
    'is_shake_mop_set_supported': True,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': True,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': True,
    'is_smart_clean_mode_set_supported': True,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': True,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': True,
    'is_support_clean_estimate': True,
    'is_support_cliff_zone': True,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': True,
    'is_support_custom_door_sill': True,
    'is_support_custom_mode_in_cleaning': True,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': True,
    'is_support_floor_edit': True,
    'is_support_furniture': True,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': True,
    'is_support_main_brush_up_down_supported': True,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': True,
    'is_support_remote_control_in_call': True,
    'is_support_room_tag': True,
    'is_support_set_switch_map_mode': True,
    'is_support_set_volume_in_call': True,
    'is_support_side_brush_up_down_supported': True,
    'is_support_smart_door_sill': True,
    'is_support_smart_global_clean_with_custom_mode': True,
    'is_support_smart_scene': True,
    'is_support_stuck_zone': True,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': True,
    'is_supported_drying': True,
    'is_supported_valley_electricity': True,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': True,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': True,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': True,
    'is_video_patrol_supported': True,
    'is_video_setting_supported': True,
    'is_voice_control_led_supported': True,
    'is_voice_control_supported': True,
    'is_wash_then_charge_cmd_supported': True,
    'is_water_leak_check_supported': True,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': True,
    'is_wifi_manage_supported': True,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_saros_10r.json]
  dict({
    'is_activate_video_charging_and_standby_supported': True,
    'is_ai_recognition_obstacle_supported': True,
    'is_ai_recognition_setting_supported': True,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': True,
    'is_auto_collection_2_supported': True,
    'is_auto_delivery_field_in_global_status_supported': True,
    'is_auto_tear_down_mop_supported': True,
    'is_avoid_collision_mode_supported': True,
    'is_avoid_collision_supported': True,
    'is_back_charge_auto_wash_supported': True,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': True,
    'is_carpet_custom_clean_supported': True,
    'is_carpet_deep_clean_supported': True,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': True,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': True,
    'is_carpet_supported': True,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': True,
    'is_clean_direct_status_supported': True,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': True,
    'is_clean_history_time_line_supported': True,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': True,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': True,
    'is_clean_time_line_supported': True,
    'is_collect_dust_count_show_supported': True,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': True,
    'is_ctm_with_repeat_supported': True,
    'is_current_map_restore_enabled': True,
    'is_custom_clean_mode_count_supported': True,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': True,
    'is_customized_clean_supported': True,
    'is_detect_wire_carpet_supported': True,
    'is_dirty_object_detect_supported': True,
    'is_dirty_replenish_clean_supported': True,
    'is_dry_interval_timer_supported': True,
    'is_dss_believable': True,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': True,
    'is_dynamically_add_clean_zones_supported': True,
    'is_dynamically_skip_clean_zone_supported': True,
    'is_egg_dance_mode_supported': True,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': True,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': True,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': True,
    'is_gap_deep_clean_supported': True,
    'is_goto_pure_clean_path_supported': True,
    'is_hot_wash_towel_supported': True,
    'is_identify_room_supported': True,
    'is_ignore_unknown_map_object_supported': True,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': True,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': True,
    'is_map_beautify_internal_debug_supported': True,
    'is_map_carpet_add_support': True,
    'is_map_eraser_supported': True,
    'is_matter_supported': True,
    'is_max_plus_mode_supported': True,
    'is_max_zone_opened_supported': True,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': True,
    'is_min_battery_15_to_clean_task_supported': True,
    'is_mop_forbidden_supported': False,
    'is_mop_path_supported': True,
    'is_mop_shake_module_supported': False,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': True,
    'is_new_ai_recognition_supported': True,
    'is_new_data_for_clean_history': True,
    'is_new_data_for_clean_history_detail': True,
    'is_new_endpoint_supported': True,
    'is_new_remote_view_supported': True,
    'is_no_need_carpet_press_set_supported': True,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': True,
    'is_offline_map_supported': True,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': True,
    'is_pet_snapshot_supported': True,
    'is_pet_supplies_deep_clean_supported': True,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': True,
    'is_record_allowed': True,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': True,
    'is_roller_mop_supported': False,
    'is_room_name_supported': True,
    'is_rpc_retry_supported': True,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': True,
    'is_setting_carpet_first_supported': True,
    'is_shake_mop_set_supported': True,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': True,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': True,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': True,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': True,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': True,
    'is_support_clean_estimate': True,
    'is_support_cliff_zone': True,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': True,
    'is_support_custom_door_sill': True,
    'is_support_custom_mode_in_cleaning': True,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': True,
    'is_support_floor_edit': True,
    'is_support_furniture': True,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': True,
    'is_support_main_brush_up_down_supported': True,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': True,
    'is_support_remote_control_in_call': True,
    'is_support_room_tag': True,
    'is_support_set_switch_map_mode': True,
    'is_support_set_volume_in_call': True,
    'is_support_side_brush_up_down_supported': True,
    'is_support_smart_door_sill': True,
    'is_support_smart_global_clean_with_custom_mode': True,
    'is_support_smart_scene': True,
    'is_support_stuck_zone': True,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': True,
    'is_supported_drying': True,
    'is_supported_valley_electricity': True,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': True,
    'is_two_key_rtv_in_charging_supported': True,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': True,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': True,
    'is_video_patrol_supported': True,
    'is_video_setting_supported': True,
    'is_voice_control_led_supported': True,
    'is_voice_control_supported': True,
    'is_wash_then_charge_cmd_supported': True,
    'is_water_leak_check_supported': False,
    'is_water_slide_mode_supported': True,
    'is_water_up_down_drain_supported': True,
    'is_wifi_manage_supported': True,
    'is_workday_holiday_supported': False,
  })
# ---
# name: test_device_features_from_home_data[home_data_device_zeo_one.json]
  dict({
    'is_activate_video_charging_and_standby_supported': False,
    'is_ai_recognition_obstacle_supported': True,
    'is_ai_recognition_setting_supported': True,
    'is_analysis_supported': False,
    'is_any_state_transit_goto_supported': False,
    'is_auto_collection_2_supported': False,
    'is_auto_delivery_field_in_global_status_supported': False,
    'is_auto_tear_down_mop_supported': False,
    'is_avoid_collision_mode_supported': False,
    'is_avoid_collision_supported': False,
    'is_back_charge_auto_wash_supported': False,
    'is_back_wash_new_smart_supported': False,
    'is_careful_slow_mop_supported': False,
    'is_carpet_custom_clean_supported': False,
    'is_carpet_deep_clean_supported': False,
    'is_carpet_long_haired_ex_supported': False,
    'is_carpet_long_haired_supported': False,
    'is_carpet_pressure_use_origin_paras_supported': False,
    'is_carpet_shape_type_supported': False,
    'is_carpet_show_on_map': False,
    'is_carpet_supported': False,
    'is_ces_2022_supported': False,
    'is_clean_count_setting_supported': False,
    'is_clean_direct_status_supported': False,
    'is_clean_efficiency_supported': False,
    'is_clean_fluid_delivery_supported': False,
    'is_clean_history_time_line_supported': False,
    'is_clean_route_deep_slow_plus_supported': False,
    'is_clean_route_fast_mode_supported': False,
    'is_clean_route_setting_supported': True,
    'is_clean_then_mop_mode_supported': False,
    'is_clean_time_line_supported': False,
    'is_collect_dust_count_show_supported': False,
    'is_collect_dust_mode_supported': True,
    'is_corner_clean_mode_supported': False,
    'is_corner_mop_stretch_supported': False,
    'is_ctm_with_repeat_supported': False,
    'is_current_map_restore_enabled': False,
    'is_custom_clean_mode_count_supported': False,
    'is_custom_mode_supported': True,
    'is_custom_water_box_distance_supported': False,
    'is_customized_clean_supported': True,
    'is_detect_wire_carpet_supported': False,
    'is_dirty_object_detect_supported': False,
    'is_dirty_replenish_clean_supported': False,
    'is_dry_interval_timer_supported': False,
    'is_dss_believable': False,
    'is_dual_band_wi_fi_supported': False,
    'is_dust_collection_setting_supported': False,
    'is_dynamically_add_clean_zones_supported': False,
    'is_dynamically_skip_clean_zone_supported': False,
    'is_egg_dance_mode_supported': False,
    'is_egg_mode_supported_from_new_features': False,
    'is_exact_custom_mode_supported': False,
    'is_exhibition_function_supported': False,
    'is_floor_dir_clean_any_time_supported': False,
    'is_flow_led_setting_supported': False,
    'is_follow_low_obs_supported': False,
    'is_full_duples_switch_supported': False,
    'is_fw_filter_obstacle_supported': False,
    'is_gap_deep_clean_supported': False,
    'is_goto_pure_clean_path_supported': False,
    'is_hot_wash_towel_supported': False,
    'is_identify_room_supported': False,
    'is_ignore_unknown_map_object_supported': False,
    'is_lds_lifting_supported': False,
    'is_led_status_switch_supported': False,
    'is_left_water_drain_supported': False,
    'is_low_area_access_supported': False,
    'is_main_brush_up_down_supported_from_str': False,
    'is_map_beautify_internal_debug_supported': False,
    'is_map_carpet_add_support': False,
    'is_map_eraser_supported': False,
    'is_matter_supported': False,
    'is_max_plus_mode_supported': True,
    'is_max_zone_opened_supported': False,
    'is_mechanical_arm_mode_supported': False,
    'is_midway_back_to_dock_supported': False,
    'is_min_battery_15_to_clean_task_supported': False,
    'is_mop_forbidden_supported': False,
    'is_mop_path_supported': False,
    'is_mop_shake_module_supported': False,
    'is_mop_shake_water_max_supported': False,
    'is_multi_floor_supported': False,
    'is_multi_map_segment_timer_supported': False,
    'is_new_ai_recognition_supported': False,
    'is_new_data_for_clean_history': False,
    'is_new_data_for_clean_history_detail': False,
    'is_new_endpoint_supported': False,
    'is_new_remote_view_supported': True,
    'is_no_need_carpet_press_set_supported': False,
    'is_none_pure_clean_mop_with_max_plus': False,
    'is_object_detect_check_supported': False,
    'is_offline_map_supported': False,
    'is_optimize_battery_supported': False,
    'is_order_clean_supported': False,
    'is_over_sea_ctm_supported': False,
    'is_pet_snapshot_supported': False,
    'is_pet_supplies_deep_clean_supported': False,
    'is_program_mode_supported': False,
    'is_pumping_water_supported': False,
    'is_pure_clean_mop_supported': True,
    'is_re_segment_supported': False,
    'is_record_allowed': False,
    'is_remote_supported': False,
    'is_right_brush_stretch_supported': False,
    'is_roller_mop_supported': False,
    'is_room_name_supported': False,
    'is_rpc_retry_supported': False,
    'is_rubber_brush_carpet_supported': False,
    'is_set_child_supported': False,
    'is_setting_carpet_first_supported': False,
    'is_shake_mop_set_supported': False,
    'is_should_show_arm_over_load_supported': False,
    'is_show_clean_finish_reason_supported': False,
    'is_show_general_obstacle_supported': False,
    'is_show_obstacle_photo_supported': False,
    'is_side_brush_lift_carpet_supported': False,
    'is_small_side_mop_supported': False,
    'is_smart_clean_mode_set_supported': False,
    'is_soak_and_wash_supported': False,
    'is_soft_clean_mode_supported': False,
    'is_sr_map_supported': False,
    'is_super_deep_wash_supported': False,
    'is_support_api_app_stop_grasp_supported': False,
    'is_support_backup_map': False,
    'is_support_clean_estimate': False,
    'is_support_cliff_zone': False,
    'is_support_custom_carpet': False,
    'is_support_custom_dnd': False,
    'is_support_custom_door_sill': False,
    'is_support_custom_mode_in_cleaning': False,
    'is_support_fetch_timer_summary': False,
    'is_support_floor_direction': False,
    'is_support_floor_edit': False,
    'is_support_furniture': False,
    'is_support_get_particular_status_supported': False,
    'is_support_incremental_map': False,
    'is_support_main_brush_up_down_supported': False,
    'is_support_mop_back_pwm_set': False,
    'is_support_quick_map_builder': False,
    'is_support_remote_control_in_call': False,
    'is_support_room_tag': False,
    'is_support_set_switch_map_mode': False,
    'is_support_set_volume_in_call': False,
    'is_support_side_brush_up_down_supported': False,
    'is_support_smart_door_sill': False,
    'is_support_smart_global_clean_with_custom_mode': False,
    'is_support_smart_scene': False,
    'is_support_stuck_zone': False,
    'is_support_voice_control_debug': False,
    'is_support_water_mode': True,
    'is_supported_download_test_voice': False,
    'is_supported_drying': False,
    'is_supported_valley_electricity': False,
    'is_sync_server_name_supported': False,
    'is_three_d_mapping_inner_test_supported': False,
    'is_tidyup_zones_supported': False,
    'is_two_gears_no_collision_supported': False,
    'is_two_key_real_time_video_supported': False,
    'is_two_key_rtv_in_charging_supported': False,
    'is_type_identify_supported': False,
    'is_unsave_map_reason_supported': False,
    'is_uvc_sterilize_supported': False,
    'is_video_monitor_supported': False,
    'is_video_patrol_supported': False,
    'is_video_setting_supported': False,
    'is_voice_control_led_supported': False,
    'is_voice_control_supported': False,
    'is_wash_then_charge_cmd_supported': False,
    'is_water_leak_check_supported': False,
    'is_water_slide_mode_supported': False,
    'is_water_up_down_drain_supported': False,
    'is_wifi_manage_supported': False,
    'is_workday_holiday_supported': False,
  })
# ---
